# libcellml

./: .clang-format  .codespell-dict  .codespellexclude  .codespellignore  .gitignore  CITATION.cff  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CTestTestfile.cmake  Makefile  README.rst  cmake_install.cmake  cmake_uninstall.cmake  default.profraw  doxy.config  libcellml-config.cmake  libcellml-targets.cmake
cmake/utils/: CMakeLists.txt  calculatesha1.cpp  compress.cpp  compress.in.h
docs/: conf.py  (+51 more)
docs/tutorials/solver/: CMakeLists.txt  simpleSolver.cpp  simplesolver.py  simplesolver_cpp.rst  simplesolver_py.rst  solver.rst
docs/tutorials/tutorial1/: CMakeLists.txt  outline1.rst  tutorial1.cpp  tutorial1.py  tutorial1_complete.cpp  tutorial1_complete.py  tutorial1_cpp.rst  tutorial1_py.rst
docs/tutorials/tutorial3/: CMakeLists.txt  outline3.rst  tutorial3.cpp  tutorial3.py  (+4 more)
scripts/: CMakeLists.txt  changegeneratorversion  changelibcellmlversion  checkversion  generatorprofilesha1value.cpp  generatorprofilesha1values.cpp  updategeneratorprofilesha1values
src/: CMakeLists.txt  Makefile  README.rst  analyser.cpp  analyser_p.h  analyserequation.cpp  analyserequation_p.h  analyserequationast.cpp  analyserequationast.h  analyserequationast_p.h  analyserexternalvariable.cpp  analyserexternalvariable_p.h  analysermodel.cpp  analysermodel_p.h  analysersymengine.cpp  analyservariable.cpp  analyservariable_p.h  annotator.cpp  anycellmlelement_p.h  cmake_install.cmake  common.h  commonutils.cpp  commonutils.h  component.cpp  component_p.h  componententity.cpp  componententity_p.h  debug.cpp  debug.h  entity.cpp  entity_p.h  enums.cpp  error.cpp  generator.cpp  generator_p.h  generatorcontext.cpp  generatorcontext_p.h  generatorequationast.h  generatorinterpreter.cpp  generatorinterpreter.h  (+87 more)
src/bindings/: CMakeLists.txt  Makefile  cmake_install.cmake
src/configure/: fullmathmldtd.in.h  generatorprofilesha1values.in.h  libcellml_config.h.in  libcellmlconfig_p.in.h  mathml_config.h.in  mathmlconfig.h.in  mathmldtd.in.cpp  mathmldtd.in.h  rawstring.in.h  versionconfig.h.in
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  gcovcoverage.py  gcovr.py  libxml2issues.2.12.h  libxml2issues.2.9.10.h  libxml2issues.2.9.11.h  libxml2issues.2.9.13.h  libxml2issues.2.9.4.h  test_bindings_python.py  test_component  test_connection  test_coverage  test_error  test_math  test_model  test_parser  test_printer  test_reset  test_resolve_imports  test_resources.cmake  test_resources.h  test_resources.h.in  test_resources.in.h  test_template.cmake  test_units  test_utils.cpp  test_utils.h  test_validator  test_variable  test_version  test_when  valgrindmemcheck.py
tests/analyser/: analyser.cpp  analyserexternalvariable.cpp  analysersymengine.cpp  analyserunits.cpp  investigate.cpp  tests.cmake
tests/annotator/: annotator.cpp  tests.cmake
tests/any_cellml_element/: tests.cmake
tests/any_item/: any_item.cpp  tests.cmake
tests/api_headers/: api_header_test.in.cmake  api_header_test.in.cpp  tests.cmake
tests/as_string/: as_string.cpp  tests.cmake
tests/bindings/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/clone/: clone.cpp  tests.cmake
tests/component/: component.cpp  encapsulation.cpp  tests.cmake
tests/connection/: connection.cpp  tests.cmake
tests/coverage/: coverage.cpp  tests.cmake
tests/enums/: enums.cpp  tests.cmake
tests/equality/: equality.cpp  tests.cmake
tests/error/: error.cpp  tests.cmake
tests/generator/: generator.cpp  generator.macros.h  generator.models.h  generatorcontext.cpp  generatorprofile.cpp  generatortrackedvariables.cpp  generatorvariabletracker.cpp  tests.cmake
tests/gtest/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  libgtest.dylib  libgtest_main.dylib
tests/import_source/: import_source.cpp  tests.cmake
tests/importer/: cellml_1_1.cpp  file_parser.cpp  import_requirement.cpp  importer.cpp  model_flattening.cpp  tests.cmake
tests/investigations/: investigations.cpp  tests.cmake
tests/isolated/: generator.cpp  tests.cmake
tests/issue/: issue.cpp  tests.cmake
tests/logger/: logger.cpp  tests.cmake
tests/math/: math.cpp  tests.cmake
tests/maths/: maths.cpp  tests.cmake
tests/model/: component-import.cpp  component_import.cpp  import_requirement.cpp  model.cpp  model_flattening.cpp  tests.cmake  units_import.cpp
tests/parser/: cellml_1_0.cpp  cellml_1_1.cpp  file-parser.cpp  file_parser.cpp  libxml_user.cpp  parser.cpp  tests.cmake
tests/printer/: printer.cpp  printer_internal.cpp  tests.cmake
tests/reset/: reset.cpp  tests.cmake
tests/resolve_imports/: file_parser.cpp  tests.cmake
tests/resources/: Ohara_Rudy_2011.cellml  a_plus_b.cellml  buried_recursive_import.cellml  circularImport_1.cellml  circularImport_2a.cellml  circularImport_2b.cellml  circularImport_3.cellml  complex_encapsulation.xml  complex_imports.xml  deriv_approx_sin.xml  dirty_encapsulated_model.cellml  dirty_model.cellml  i_am_almost_ok.cellml  i_am_ok.cellml  import_invalid_import_url.cellml  import_missing_file.cellml  import_units_model.cellml  importedModel.cellml  importedModelWithCustomUnits.cellml  importedModelWithCustomUnits1.cellml  importedModelWithCustomUnits2.cellml  importedModelWithMaps.cellml  importedModelWithMapsOfDifferentUnits.cellml  importingModel.cellml  importingModelChildComponent.cellml  importingModelGrandchildComponent.cellml  importingModelGrandparentComponent.cellml  importingModelParentComponent.cellml  invalid_cellml_2.0.xml  invalid_import_url.cellml  invalidmathmlelements.cellml  invalidmathmlelementschildrenorsiblings.cellml  level0-broken-imports.xml  level0.xml  level1-3.xml  level1.xml  level2.xml  model_wrong_attribute.cellml  multiplecellmlnamespaces.cellml  no_namespace.cellml  (+22 more)
tests/units/: tests.cmake  units.cpp
tests/validator/: tests.cmake  validator.cpp
tests/variable/: tests.cmake  variable.cpp  variable.cpp.autosave
tests/version/: tests.cmake  version.cpp
tests/when/: tests.cmake  when.cpp
(+1918 files in other folders)
